# inkos

./: .gitignore  INKOS_MASTER_DEV_DOC_FULL.md  README.md  ROADMAP.md
core/: Cargo.toml
core/src/: errors.rs  lib.rs  logging.rs  model_manager.rs  summarizer.rs
core/src/agents/: config.rs  mod.rs  orchestrator.rs  providers.rs
core/src/api/: mod.rs  v1.rs
core/src/db/: mod.rs
core/src/workers/: mod.rs
docs/: api.md  architecture.md  error-codes.md  logging.md
migrations/: 0001_init.sql  0002_ai_settings.sql  0003_logbook_timeline.sql  0004_conversations_summaries.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  package-lock.json  package.json
ui/src/: main.tsx
ui/src/components/: Console.tsx  Palette.tsx
ui/src/lib/: api.ts
ui/src/modules/: App.tsx  Chat.tsx  Settings.tsx  Timeline.tsx
ui/src/state/: index.ts  settings.ts
