[package]
name = "inkos_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "inkos_core"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
anyhow = "1"
log = "0.4"
